#9 Added/updated enums AppointmentStatus, FormSubmissionStatus, SaleStatus, ShipmentStatus, ShipmentAddrStatus, TicketBaseStatus, TicketCategoryClosingStatus, WebhookState

--- a/docs/api-reference/CRMScript.NetServer.NSFormSubmissionEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFormSubmissionEntity.yml
@@ -218,14 +218,14 @@ items:
   nameWithType: NSFormSubmissionEntity.GetStatus()
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.GetStatus()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = InProgress</li><li>Enum: 2 = EmailVerification</li><li>Enum: 3 = Submitted</li><li>Enum: 4 = Processed</li><li>Enum: 5 = Failed</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetStatus()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: What is the status of this submission
+      description: The status of this submission. See <xref href=\"FormSubmissionStatus\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSFormSubmissionEntity thing;\nInteger status = thing.GetStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFormSubmissionEntity.GetWhenSubmitted()
@@ -441,7 +441,7 @@ items:
     parameters:
     - id: status
       type: CRMScript.Global.Integer
-      description: What is the status of this submission. See enum status.
+      description: What is the status of this submission. See <xref href=\"FormSubmissionStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -499,3 +499,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.FormSubmissionStatus
+  commentId: T:CRMScript.NetServer.FormSubmissionStatus
+  isExternal: true
+  name: FormSubmissionStatus
+  nameWithType: FormSubmissionStatus
+  fullName: CRMScript.NetServer.FormSubmissionStatus
