--- a/docs/api-reference/CRMScript.NetServer.NSSale.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSale.yml
@@ -528,14 +528,14 @@ items:
   nameWithType: NSSale.GetStatus()
   fullName: CRMScript.NetServer.NSSale.GetStatus()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Open</li><li>Enum: 2 = Sold</li><li>Enum: 3 = Lost</li><li>Enum: 4 = Stalled</li><li>Enum: 1000 = SaintAll</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetStatus()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The sale's status, indicating wether the sale is open, sold or lost.
+      description: The sale's status, indicating wether the sale is open, sold or lost. See <xref href=\"SaleStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSSale thing;\nInteger status = thing.GetStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSale.GetTitle()
@@ -1079,7 +1079,7 @@ items:
     parameters:
     - id: status
       type: CRMScript.Global.Integer
-      description: The sale's status, indicating wether the sale is open, sold or lost. See enum status.
+      description: The sale's status, indicating wether the sale is open, sold or lost. See <xref href=\"SaleStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1165,3 +1165,10 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.SaleStatus
+  commentId: T:CRMScript.NetServer.SaleStatus
+  parent: SuperOffice.Data
+  isExternal: true
+  name: SaleStatus
+  nameWithType: SaleStatus
+  fullName: CRMScript.NetServer.SaleStatus
