--- a/docs/api-reference/CRMScript.NetServer.NSSaleEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleEntity.yml
@@ -895,14 +895,14 @@ items:
   nameWithType: NSSaleEntity.GetStatus()
   fullName: CRMScript.NetServer.NSSaleEntity.GetStatus()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Open</li><li>Enum: 2 = Sold</li><li>Enum: 3 = Lost</li><li>Enum: 4 = Stalled</li><li>Enum: 1000 = SaintAll</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetStatus()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The state of the Sale Open / Sold / Lost / Stalled
+      description: The state of the Sale (Open, Sold, Lost, Stalled). See <xref href=\"SaleStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSSaleEntity thing;\nInteger status = thing.GetStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSaleEntity.GetUpdatedBy()
@@ -1853,7 +1853,7 @@ items:
     parameters:
     - id: status
       type: CRMScript.Global.Integer
-      description: The state of the Sale Open / Sold / Lost / Stalled See enum status.
+      description: The state of the Sale (Open,Sold,Lost,Stalled). See <xref href=\"SaleStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -2139,3 +2139,10 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.SaleStatus
+  commentId: T:CRMScript.NetServer.SaleStatus
+  parent: SuperOffice.Data
+  isExternal: true
+  name: SaleStatus
+  nameWithType: SaleStatus
+  fullName: CRMScript.NetServer.SaleStatus
