--- a/docs/api-reference/CRMScript.NetServer.NSTicket.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicket.yml
@@ -216,14 +216,14 @@ items:
   nameWithType: NSTicket.GetBaseStatus()
   fullName: CRMScript.NetServer.NSTicket.GetBaseStatus()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Active</li><li>Enum: 2 = Closed</li><li>Enum: 3 = Postponed</li><li>Enum: 4 = Deleted</li><li>Enum: 5 = Merged</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetBaseStatus()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The status of the ticket. I.e. active/closed/postponed/deleted
+      description: The status of the ticket. See <xref href=\"TicketBaseStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicket thing;\nInteger baseStatus = thing.GetBaseStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicket.GetCategory()
@@ -1211,7 +1211,7 @@ items:
     parameters:
     - id: baseStatus
       type: CRMScript.Global.Integer
-      description: The status of the ticket. I.e. active/closed/postponed/deleted See enum baseStatus.
+      description: The status of the ticket. See <xref href=\"TicketBaseStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -2215,21 +2215,15 @@ references:
   name: Bool
   nameWithType: Bool
   fullName: CRMScript.Global.Bool
-- uid: CRMScript.Global.Integer
-  commentId: T:CRMScript.Global.Integer
-  isExternal: true
-  name: Integer
-  nameWithType: Integer
-  fullName: CRMScript.Global.Integer
-- uid: CRMScript.Global.Integer
-  commentId: T:CRMScript.Global.Integer
-  isExternal: true
-  name: Integer
-  nameWithType: Integer
-  fullName: CRMScript.Global.Integer
 - uid: CRMScript.Global.Void
   commentId: T:CRMScript.Global.Void
   isExternal: true
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.TicketBaseStatus
+  commentId: T:CRMScript.NetServer.TicketBaseStatus
+  isExternal: true
+  name: TicketBaseStatus
+  nameWithType: TicketBaseStatus
+  fullName: CRMScript.NetServer.TicketBaseStatus
