--- a/docs/api-reference/CRMScript.NetServer.NSTicketEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketEntity.yml
@@ -191,14 +191,14 @@ items:
   nameWithType: NSTicketEntity.GetBaseStatus()
   fullName: CRMScript.NetServer.NSTicketEntity.GetBaseStatus()
   type: Method
-  summary: "\nThe status of the ticket. I.e. active/closed/postponed/deleted\n"
-  remarks: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Active</li><li>Enum: 2 = Closed</li><li>Enum: 3 = Postponed</li><li>Enum: 4 = Deleted</li><li>Enum: 5 = Merged</li></ul>\n"
+  summary: 
+  remarks: ""
   syntax: 
     content: Integer GetBaseStatus()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: The status of the ticket. See <xref href=\"TicketBaseStatus\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSTicketEntity thing;\nInteger baseStatus = thing.GetBaseStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketEntity.GetCategory()
@@ -1073,14 +1073,14 @@ items:
   nameWithType: NSTicketEntity.SetBaseStatus(Integer)
   fullName: CRMScript.NetServer.NSTicketEntity.SetBaseStatus(Integer)
   type: Method
-  summary: "\nThe status of the ticket. I.e. active/closed/postponed/deleted\n"
-  remarks: "\nSee enum baseStatus.\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetBaseStatus(Integer baseStatus)
     parameters:
     - id: baseStatus
       type: CRMScript.Global.Integer
-      description: 
+      description: The status of the ticket. See <xref href=\"TicketBaseStatus\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -2008,3 +2008,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.TicketBaseStatus
+  commentId: T:CRMScript.NetServer.TicketBaseStatus
+  isExternal: true
+  name: TicketBaseStatus
+  nameWithType: TicketBaseStatus
+  fullName: CRMScript.NetServer.TicketBaseStatus
