--- a/docs/api-reference/CRMScript.NetServer.NSWebhookAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWebhookAgent.yml
@@ -103,7 +103,7 @@ items:
       description: 
     - id: statusFilter
       type: CRMScript.Global.Integer
-      description: See enum statusFilter.
+      description: See <xref href=\"WebhookState\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.NetServer.NSWebhook[]
   example: 
@@ -264,12 +264,6 @@ references:
   - name: '[]'
     nameWithType: '[]'
     fullName: '[]'
-- uid: CRMScript.NetServer.NSWebhook
-  commentId: T:CRMScript.NetServer.NSWebhook
-  isExternal: true
-  name: NSWebhook
-  nameWithType: NSWebhook
-  fullName: CRMScript.NetServer.NSWebhook
 - uid: CRMScript.Global.Void
   commentId: T:CRMScript.Global.Void
   isExternal: true
@@ -282,3 +276,9 @@ references:
   name: NSWebhookResult
   nameWithType: NSWebhookResult
   fullName: CRMScript.NetServer.NSWebhookResult
+- uid: CRMScript.NetServer.WebhookState
+  commentId: T:CRMScript.NetServer.WebhookState
+  isExternal: true
+  name: WebhookState
+  nameWithType: WebhookState
+  fullName: CRMScript.NetServer.WebhookState
