--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -878,6 +878,8 @@ items:
       href: CRMScript.NetServer.AppointmentCautionWarning.yml
     - name: AppointmentPrivate
       href: CRMScript.NetServer.AppointmentPrivate.yml
+    - name: AppointmentStatus
+      href: CRMScript.NetServer.AppointmentStatus.yml
     - name: AppointmentType
       href: CRMScript.NetServer.AppointmentType.yml
     - name: Enum archivedState
@@ -886,8 +888,6 @@ items:
       href: CRMScript.NetServer.AssignmentStatus.yml
     - name: AssociateType
       href: CRMScript.NetServer.AssociateType.yml
-    - name: Enum baseStatus
-      href: CRMScript.NetServer.baseStatus.yml
     - name: Enum BatchTaskState
       href: CRMScript.NetServer.BatchTaskState.yml
     - name: BookingType
@@ -912,8 +912,6 @@ items:
       href: CRMScript.NetServer.CheckoutState.yml
     - name: Enum children
       href: CRMScript.NetServer.children.yml
-    - name: Enum closingStatus
-      href: CRMScript.NetServer.closingStatus.yml
     - name: Enum colorIndex
       href: CRMScript.NetServer.colorIndex.yml
     - name: ContactAction
@@ -976,6 +974,8 @@ items:
       href: CRMScript.NetServer.FieldMetadataType.yml
     - name: FormsRecaptchaMode
       href: CRMScript.NetServer.FormsRecaptchaMode.yml
+    - name: FormSubmissionStatus
+      href: CRMScript.NetServer.FormSubmissionStatus.yml
     - name: FreeTextOperator
       href: CRMScript.NetServer.FreeTextOperator.yml
     - name: GeneratorEncoding
@@ -990,8 +990,6 @@ items:
       href: CRMScript.NetServer.LicenseStatus.yml
     - name: Enum messageCategory
       href: CRMScript.NetServer.messageCategory.yml
-    - name: Enum msgClosingStatus
-      href: CRMScript.NetServer.msgClosingStatus.yml
     - name: Enum name
       href: CRMScript.NetServer.name.yml
     - name: Navigation
@@ -1004,8 +1002,6 @@ items:
       href: CRMScript.NetServer.orientation.yml
     - name: Enum origin
       href: CRMScript.NetServer.origin.yml
-    - name: Enum participantStatus
-      href: CRMScript.NetServer.participantStatus.yml
     - name: Enum path
       href: CRMScript.NetServer.path.yml
     - name: Enum personId
@@ -1034,6 +1030,9 @@ items:
       href: CRMScript.NetServer.ReturnType.yml
     - name: Enum roleType
       href: CRMScript.NetServer.roleType.yml
+    - name: SaleStatus
+      href: CRMScript.NetServer.SaleStatus.yml
+    - name: Enum selectionType
     - name: Enum scope
       href: CRMScript.NetServer.scope.yml
     - name: Enum selectionType
@@ -1044,24 +1043,26 @@ items:
       href: CRMScript.NetServer.SenderMailMode.yml
     - name: MailboxType
       href: CRMScript.NetServer.MailboxType.yml
+    - name: ShipmentAddrStatus
+      href: CRMScript.NetServer.ShipmentAddrStatus.yml
+    - name: ShipmentStatus
+      href: CRMScript.NetServer.ShipmentStatus.yml
     - name: ShowState
       href: CRMScript.NetServer.ShowState.yml
     - name: Enum slevel
       href: CRMScript.NetServer.slevel.yml
     - name: Enum source
       href: CRMScript.NetServer.source.yml
-    - name: Enum state
-      href: CRMScript.NetServer.state.yml
-    - name: Enum status
-      href: CRMScript.NetServer.status.yml
-    - name: Enum statusFilter
-      href: CRMScript.NetServer.statusFilter.yml
     - name: StringSearchType
       href: CRMScript.NetServer.StringSearchType.yml
     - name: Enum tableRights
       href: CRMScript.NetServer.tableRights.yml
     - name: TaskType
       href: CRMScript.NetServer.TaskType.yml
+    - name: TicketBaseStatus
+      href: CRMScript.NetServer.TicketBaseStatus.yml
+    - name: TicketCategoryClosingStatus
+      href: CRMScript.NetServer.TicketCategoryClosingStatus.yml
     - name: Enum ticketChangedPriority
       href: CRMScript.NetServer.ticketChangedPriority.yml
     - name: Enum ticketClosed
@@ -1086,6 +1087,8 @@ items:
       href: CRMScript.NetServer.valueType.yml
     - name: Enum visibility
       href: CRMScript.NetServer.visibility.yml
+    - name: WebhookState
+      href: CRMScript.NetServer.WebhookState.yml
     - name: WidgetRequiredFields
       href: CRMScript.NetServer.WidgetRequiredFields.yml
     - name: WidgetTheme
